<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_syrup" />

        <CheckBox
            android:id="@+id/checkbox_sprinkles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sprinkles" />

        <CheckBox
            android:id="@+id/checkbox_crushed_nuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crushed_nut" />

        <CheckBox
            android:id="@+id/checkbox_cherries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cherrries" />

        <CheckBox
            android:id="@+id/checkbox_orio_cookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orio_cookie" />


        <Button
            android:id="@+id/btn_show_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toast_button"
            android:onClick="onSubmit"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>